--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,26 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="margin: 0px; padding: 0px">
 
-    <div style="max-width: 1024px; margin: auto;">
-      {{ content }}
+    <!-- header box -->
+    <div style="width: 100%; height: 40px; background-color: #fafbfc; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #e1e4e8;">
+        <div style="max-width: 1024px;  margin: auto; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);">
+            <h3><a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a> API reference</h3>
+        </div>
     </div>
+
+    <!-- page body -->
+    <div style="max-width: 1024px;  margin: auto; padding-top: 50px; padding-bottom: 50px">
+        {{ content }}
+    </div>
+
+    <!-- page footer -->
+    <div style="max-width: 1024px;  margin: auto;">
+        <i>Copyright © Microsoft Corporation. All rights reserved.</i>
+    </div>
+
+
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
   {% if site.google_analytics %}
