--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,24 +13,25 @@
     <![endif]-->
   </head>
   <body style="margin: 0px; padding: 0px">
+    <!-- content for sticky-footer -->
+    <div style="min-height: calc(100vh - 70px);">
+        <!-- header box -->
+        <div style="width: 100%; height: 40px; background-color: #fafbfc; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #e1e4e8;">
+            <div style="max-width: 1024px;  margin: auto; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);">
+                <h3><a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a> API reference</h3>
+            </div>
+        </div>
 
-    <!-- header box -->
-    <div style="width: 100%; height: 40px; background-color: #fafbfc; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #e1e4e8;">
-        <div style="max-width: 1024px;  margin: auto; position: relative; top: 50%; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);">
-            <h3><a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a> API reference</h3>
+        <!-- page body -->
+        <div style="max-width: 1024px;  margin: auto; padding-top: 50px; padding-bottom: 50px">
+            {{ content }}
         </div>
     </div>
 
-    <!-- page body -->
-    <div style="max-width: 1024px;  margin: auto; padding-top: 50px; padding-bottom: 50px">
-        {{ content }}
-    </div>
-
-    <!-- page footer -->
-    <div style="max-width: 1024px;  margin: auto;">
+    <!-- sticky-footer -->
+    <div style="max-width: 1024px; margin: auto; height: 50px;">
         <i>Copyright © Microsoft Corporation. All rights reserved.</i>
     </div>
-
 
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
