Fix scroll bar issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
         </div>
     </div>
 
-    <!-- sticky-footer -->
-    <div style="max-width: 800px; margin: auto; padding-left: 30px; padding-right: 30px; height: 45px; border-top-width: 1px; border-top-style: solid; border-top-color: #e1e4e8;">
+    <!-- sticky-footer (height is 45px minus 1px border) -->
+    <div style="max-width: 800px; margin: auto; padding-left: 30px; padding-right: 30px; height: 44px; border-top-width: 1px; border-top-style: solid; border-top-color: #e1e4e8;">
         <i>Copyright © Microsoft Corporation. All rights reserved.</i>
     </div>
 
