--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,14 @@
 {% seo %}
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="/assets/css/style-overrides.css">
+    <style>
+      a:hover {
+        color: #000;
+        font-weight: normal;
+        text-decoration: underline;
+      }
+    </style>
+    </head>
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
